--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@ p, span{
     max-width: 1080px;
     width: 90%;
     font-family: 'Forum', cursive;
-    margin:10px;
+    margin:10px 0px 0px 0px;
 }
 .smaller-image{
     width:40px;
