--- a/css/index.css
+++ b/css/index.css
@@ -32,9 +32,10 @@ p, span{
     width:40px;
 }
 
-#logo{
-    display: float; 
+.logo{
     width:30px;
+    display: float; 
+    
 }
 
 a, h1, h2, h3, h4, h5, h6, ul, li {
