--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,8 @@ footer{
 }
 nav {
     display: block;
-    alignment-baseline: middle;
+    float: right;
+    clear:right;
 }
 .container{
     background-color:#B7EBC7;
@@ -35,13 +36,6 @@ p, span{
     width:40px;
 }
 
-.logo{
-    width:30px;
-    float:left;
-    clear:left;
-    
-}
-
 a, h1, h2, h3, h4, h5, h6 {
     font-family: 'Cinzel', cursive;
     padding:1px 1px 1px 1px;
@@ -57,11 +51,14 @@ ul{
 
 .displayed{
     display: block;
-    margin-left: 30%;
+    margin-left: 20%;
     margin-right: 10%;
     width: 60%;
     position: static;
     
+}
+hr{
+     width:50%;
 }
 
 li{
@@ -108,6 +105,7 @@ label{
 input {
   display: block;
   float: left;
+  clear:left;
    width: 280px;
 }
 
