--- a/css/index.css
+++ b/css/index.css
@@ -100,7 +100,7 @@ label{
     display: block;
     float: left;
     clear: left;
-    width: 200px;
+    width: 60%;
     text-align: left;
 }
 input {
