--- a/css/index.css
+++ b/css/index.css
@@ -40,7 +40,7 @@ a, h1, h2, h3, h4, h5, h6 {
     font-family: 'Cinzel', cursive;
     padding:1px 1px 1px 1px;
     margin: 10px auto;
-    font-size:25px;
+    font-size:x-large;
 }
 ul{
     font-family: 'Cinzel', cursive;
@@ -54,7 +54,7 @@ ul{
     
     margin-left: 30%;
     margin-right: 10%;
-    width: width: 200px;
+    width: 500px;
     position: static;
     
 }
